--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "cors": "^2.7.1",
     "event-stream": "^3.3.1",
+    "body-parser": "^1.14.1",
     "express": "^4.10.7",
     "gulp-util": "^3.0.5",
     "lodash": "^3.9.3",
